Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/Reference_Period_Week__c.object-meta.xml
<CustomObject>
    <description>A single week, for a single driver, in a reference period</description>
    <label>Reference Period Week</label>
    <nameField>
        <displayFormat>RPW-{0}</displayFormat>
        <label>Reference Period Week Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Period Weeks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>