Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Average_Hours__c.field-meta.xml
<CustomField>
    <fullName>Average_Hours__c</fullName>
    <inlineHelpText>Average driving hours this week</inlineHelpText>
    <label>Average Hours</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>