Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Breaks__c.field-meta.xml
<CustomField>
    <fullName>Breaks__c</fullName>
    <label>Breaks</label>
    <summarizedField>Reference_Period_Job__c.Break__c</summarizedField>
    <summaryForeignKey>Reference_Period_Job__c.Reference_Period_Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>