Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Driver-written comments.</inlineHelpText>
    <label>Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>