Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reference Period Weeks</relationshipLabel>
    <relationshipName>Reference_Period_Weeks</relationshipName>
    <type>Lookup</type>
</CustomField>