Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Duty_Hours__c.field-meta.xml
<CustomField>
    <fullName>Duty_Hours__c</fullName>
    <label>Duty Hours</label>
    <summarizedField>Reference_Period_Job__c.Duty_Hours__c</summarizedField>
    <summaryForeignKey>Reference_Period_Job__c.Reference_Period_Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>