Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Hours_Left__c.field-meta.xml
<CustomField>
    <fullName>Hours_Left__c</fullName>
    <inlineHelpText>Hours left to drive this week.</inlineHelpText>
    <label>Hours Left</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>