Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Is_Locked__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked__c</fullName>
    <formula>TODAY()
 -
 ($Setup.Driving_Settings__c.Editable_Driving_Weeks__c * 7) &gt; Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Locked</label>
    <type>Checkbox</type>
</CustomField>