Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Manually_Saved__c.field-meta.xml
<CustomField>
    <fullName>Manually_Saved__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Denotes whether this week has been saved manually by a user.</inlineHelpText>
    <label>Manually Saved</label>
    <type>Checkbox</type>
</CustomField>