Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Other_Hours__c.field-meta.xml
<CustomField>
    <fullName>Other_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Hours worked for other agencies this week.</inlineHelpText>
    <label>Other Hours</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>