Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Period_of_Availability__c.field-meta.xml
<CustomField>
    <fullName>Period_of_Availability__c</fullName>
    <label>Period of Availability</label>
    <summarizedField>Reference_Period_Job__c.Period_of_Availability__c</summarizedField>
    <summaryForeignKey>Reference_Period_Job__c.Reference_Period_Week__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>