Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Reference_Period__c.field-meta.xml
<CustomField>
    <fullName>Reference_Period__c</fullName>
    <label>Reference Period</label>
    <referenceTo>Reference_Period__c</referenceTo>
    <relationshipLabel>Reference Period Weeks</relationshipLabel>
    <relationshipName>Reference_Period_Weeks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>