Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Target_Average__c.field-meta.xml
<CustomField>
    <fullName>Target_Average__c</fullName>
    <inlineHelpText>Calculated target average hours for this week.</inlineHelpText>
    <label>Target Average</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>