Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <formula>(Duty_Hours__c + Unavailable_Hours__c + Other_Hours__c) - (Period_of_Availability__c + Breaks__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total hours worked this week.</inlineHelpText>
    <label>Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>