Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Unavailable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Unavailable_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Hours the driver was unavailable this week.</inlineHelpText>
    <label>Unavailable Hours</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>