Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <label>Week Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>