Frankbelford/uatv1ba/force-app/main/default/objects/Reference_Period_Week__c/validationRules/Other_Work_Maximum_Hours.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Work_Maximum_Hours</fullName>
    <active>true</active>
    <description>Calculates the maximum hours of other work that a driver can complete during a particular week.</description>
    <errorConditionFormula>Other_Hours__c  &gt; 200 || 
Other_Hours__c  &lt; 0</errorConditionFormula>
    <errorDisplayField>Other_Hours__c</errorDisplayField>
    <errorMessage>Value must be between 0 and 200 hours.</errorMessage>
</ValidationRule>